--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -4,22 +4,22 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
 on:
-  # pull_request:
-  #   branches: [ master ]
-  #   paths:
-  #   - '**.txt' # only take action when *.txt files change
-  push:
+  pull_request:
     branches: [ master ]
     paths:
     - '**.txt' # only take action when *.txt files change
+  # push:
+  #   branches: [ master ]
+  #   paths:
+  #   - '**.txt' # only take action when *.txt files change
   workflow_dispatch:
 
 jobs:
   changedfiles:
     runs-on: ubuntu-latest
     outputs:
-      all: ${{ steps.changes.outputs.all}}
-      txt: ${{ steps.changes.outputs.txt}}
+      all: ${{ steps.changes.outputs.all }}
+      txt: ${{ steps.changes.outputs.txt }}
     steps:
         # Make sure we have some code to diff.
       - name: Checkout repository
