--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -14,7 +14,7 @@ on:
     - '**.txt' # only take action when *.txt files change
   workflow_dispatch:
 
-# Alternate approach in https://dev.to/scienta/get-changed-files-in-github-actions-1p36
+# Alternative approach in https://dev.to/scienta/get-changed-files-in-github-actions-1p36
 
 jobs:
   modifyfiles:
@@ -22,13 +22,30 @@ jobs:
     name: Test changed-files
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+#         with:
+#           fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+          
+#       - name: Get changed files
+#         id: changed-files
+#         uses: tj-actions/changed-files@v13
+        
+#       - name: List all changed files
+#         run: |
+#           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+#             echo "$file was changed"
+#           done
+          
+      # Get list of files that have been changed
       - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v13
-      - name: List all changed files
+        id: changes
         run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
+          echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
+          echo "::set-output name=json::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .txt$ | xargs)"        
+      
+      # To correct some JSON changes introduce by the translation
+      - name: Transform JSON files
+        id: Transform
+#         if: ${{ steps.translator.outputs.has-new-translations }} == 'true'
+        run: |
+          inputFiles="${steps.changes.outputs.txt}"
+          for inputFile in $inputFiles; do ./scripts/base64encode.sh $inputFile; done
