--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -43,11 +43,11 @@ jobs:
           echo "txt=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .txt$ | xargs)" >> $GITHUB_OUTPUT
       
       # To correct some JSON changes introduce by the translation
-      - name: Transform JSON files
+      - name: Work with the list of modified files
         id: Transform
 #         if: ${{ steps.translator.outputs.has-new-translations }} == 'true'
         run: |
-          echo "Processing changed file list: ${{ steps.changes.outputs.txt }}
+          echo "Processing changed file list: ${{ steps.changes.outputs.txt }}"
           input_files="${{ steps.changes.outputs.txt }}"
           echo $input_files
           for input_file in $input_files; do echo "Processing ${input_file}..."; ./scripts/base64encode.sh $input_file; done
