--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -48,7 +48,7 @@ jobs:
         id: Transform
 #         if: ${{ steps.translator.outputs.has-new-translations }} == 'true'
         run: |
-          echo "Processing changed file list: ${{ steps.changes.outputs.txt }}"
+          echo "Processing changed file list: '${{ steps.changes.outputs.txt }}'"
           input_files="${{ steps.changes.outputs.txt }}"
           echo $input_files
           for input_file in $input_files; do echo "Processing ${input_file}..."; ./scripts/base64encode.sh $input_file; done
