--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-#         with:
-#            fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+        with:
+           fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
           
 #       - name: Get changed files
 #         id: changed-files
@@ -50,6 +50,7 @@ jobs:
         run: |
           echo "Modified file list: '${{ steps.changes.outputs.all }}'"
           echo "Modified text file list: '${{ steps.changes.outputs.txt }}'"
+          echo "Calculating here the modified text file list: '$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  | grep .txt$ | xargs)'"
           input_files="${{ steps.changes.outputs.txt }}"
           echo $input_files
           for input_file in $input_files; do echo "Processing ${input_file}..."; ./scripts/base64encode.sh $input_file; done
