--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -53,4 +53,4 @@ jobs:
           echo "Calculating here the modified text file list: '$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  | grep .txt$ | xargs)'"
           input_files="${{ steps.changes.outputs.txt }}"
           echo $input_files
-          for input_file in $input_files; do echo "Processing ${input_file}..."; ./scripts/base64encode.sh $input_file; done
+          for input_file in $input_files; do echo "Processing ${input_file}..."; sh ./scripts/base64encode.sh $input_file; done
