--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -52,7 +52,7 @@ jobs:
           echo "Calculating here the modified text file list: '$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  | grep .txt$ | xargs)'"
           input_files="${{ steps.changes.outputs.txt }}"
           echo $input_files
-          for input_file in $input_files; do echo "Processing ${input_file}..."; echo "done_something=yes" >> $GITHUB_OUTPUT sh ./scripts/base64encode.sh $input_file; done
+          for input_file in $input_files; do echo "Processing ${input_file}..."; echo "done_something=yes" >> $GITHUB_OUTPUT; sh ./scripts/base64encode.sh $input_file; done
           
       # Create the PR
       - name: Create pull request
