--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        with:
-           fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+#         with:
+#            fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
           
 #       - name: Get changed files
 #         id: changed-files
@@ -40,8 +40,8 @@ jobs:
       - name: Get changed files
         id: changes
         run: |
-          echo "all=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.push.base.sha }} ${{ github.sha }} | xargs)" >> $GITHUB_OUTPUT
-          echo "txt=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.push.base.sha }} ${{ github.sha }} | grep .txt$ | xargs)" >> $GITHUB_OUTPUT
+          echo "all=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)" >> $GITHUB_OUTPUT
+          echo "txt=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .txt$ | xargs)" >> $GITHUB_OUTPUT
       
       - name: Work with the list of modified files
         id: transform
