--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -37,30 +37,18 @@ jobs:
 #           done
           
       # Get list of files that have been changed
-      - name: Get changed files
-        id: changes
-        run: |
-          echo "all=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)" >> $GITHUB_OUTPUT
-          echo "txt=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .txt$ | xargs)" >> $GITHUB_OUTPUT
-
       - id: files
         uses: jitterbit/get-changed-files@v1
-      - id: do
-        run: |
-          for changed_file in ${{ steps.files.outputs.all }}; do
-            echo "Do something with ${changed_file}."
-          done
-
+      
+      # Process the changed files
       - name: Work with the list of modified files
         id: transform
-#         if: ${{ steps.translator.outputs.has-new-translations }} == 'true'
         run: |
-          echo "Modified file list: '${{ steps.changes.outputs.all }}'"
-          echo "Modified text file list: '${{ steps.changes.outputs.txt }}'"
-          echo "Calculating here the modified text file list: '$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  | grep .txt$ | xargs)'"
-          input_files="${{ steps.changes.outputs.txt }}"
-          echo $input_files
-          for input_file in $input_files; do echo "Processing ${input_file}..."; echo "done_something=yes" >> $GITHUB_OUTPUT; sh ./scripts/base64encode.sh $input_file; done
+          for input_file in ${{ steps.files.outputs.all }}; do 
+            echo "Processing ${input_file}..."
+            echo "done_something=yes" >> $GITHUB_OUTPUT
+            sh ./scripts/base64encode.sh $input_file
+          done
           
       # Create the PR
       - name: Create pull request
