--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -45,9 +45,13 @@ jobs:
         id: transform
         run: |
           for input_file in ${{ steps.files.outputs.all }}; do 
-            echo "Processing ${input_file}..."
-            echo "done_something=yes" >> $GITHUB_OUTPUT
-            sh ./scripts/base64encode.sh $input_file
+            input_file_extension=${input_file: -7}
+            if [[ "$input_file_extension" == "en.json" ]]; then
+              echo "Processing ${input_file}..."
+              echo "done_something=yes" >> $GITHUB_OUTPUT
+              # sh ./scripts/base64encode.sh $input_file
+              python3 ./scripts/translate.py --input-file $input_file
+            fi
           done
           
       # Create the PR
