--- a/.github/workflows/appendtext.yml
+++ b/.github/workflows/appendtext.yml
@@ -11,7 +11,7 @@ on:
   push:
     branches: [ master ]
     paths:
-    - '**.txt' # only take action when *.txt files change
+    - '**.en.json' # only take action when *.en.json files change
   workflow_dispatch:
 
 # Alternative approach in https://dev.to/scienta/get-changed-files-in-github-actions-1p36
