--- a/.github/workflows/checklist_lint.yml
+++ b/.github/workflows/checklist_lint.yml
@@ -6,10 +6,10 @@ env:
 on:
   push:
     branches:
-    - main
+    - master
   pull_request:
     branches:
-    - main
+    - master
 
 jobs:
   hello_world_job:
